# ProductAgent

./: .env.example  .gitignore  README.md  acquire_data.sh  pyproject.toml  run_data_pipeline.sh
agents/: __init__.py  main.py  product_analysis_agent.py  product_search_agent.py  prompts.py  tools.py  web_analysis_agent.py
data_pipeline/: cleaning.py  create_duckdb.py  ingest_fast_job.py  ingest_job.py
data_processing/: cleaning.py
multiagents/: main.py
multiagents/agents/: __init__.py  contracts.py  langgraph_multiagent.py  prompts.py  tools.py
search/: engine.py
ui/: main.py
